--- a/css/index1.css
+++ b/css/index1.css
@@ -11,7 +11,7 @@ body{
     font-size: 1vw;
 }
 .fontalta{
-    font-size: 1.3vw;
+    font-size: 4vw;
 }
 
 .fundo{
@@ -37,7 +37,7 @@ hr{
 }
 .barra{
     background-color: whitesmoke;
-    width: 15vh;
+    width: 10vw;
     height: 3vh;
 }
 
