--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,57 +1,4 @@
 body {
-    background-color: #0e0e0e;
-    box-sizing: content-box;
-}
-
-.smartphone {
-    background-image: url("/assets/img/smartphone.png");
-    background-repeat: no-repeat;
-    width: 410px;
-    height: 848px;
-    border-radius: 10px;
-}
-
-.screen {
-    width: 410px;
-    height: 805px;
-    margin-top: 100px !important;
-}
-
-.conteudo {
-    /* background: rgb(246, 246, 252); */
-    background: linear-gradient(42deg, rgba(243, 243, 255, .3) 0%, rgba(243, 243, 255, .3) 32%, rgba(175, 181, 182, .3) 46%, rgba(243, 243, 255, .3) 55%, rgba(181, 186, 188, .3) 79%, rgba(175, 181, 182, .3) 93%);
-    padding-left: 10px;
-    overflow-y: scroll;
-}
-
-.page {
-    display: none;
-}
-
-
-/* width */
-
-::-webkit-scrollbar {
-    width: 2px;
-}
-
-
-/* Track */
-
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-
-
-/* Handle */
-
-::-webkit-scrollbar-thumb {
-    background: #888;
-}
-
-
-/* Handle on hover */
-
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background-color: #121111;
+    color: #4AF626;
 }
